--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,23 +4,17 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-    assignees:
-      - "Timeraa"
     commit-message:
       prefix: "🔼"
       prefix-development: "🔼"
     labels:
-      - "dependencies"
-    open-pull-requests-limit: 15
+      - "🔼 dependencies"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "daily"
-    assignees:
-      - "Timeraa"
     commit-message:
       prefix: "🔼"
       prefix-development: "🔼"
     labels:
-      - "dependencies"
-    open-pull-requests-limit: 15
+      - "🔼 dependencies"
