--- a/.github/workflows/CD Docker.yml
+++ b/.github/workflows/CD Docker.yml
@@ -1,8 +1,12 @@
 name: CD Docker
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
 on:
   workflow_run:
     workflows: ["CI Dependencies"]
-    branches: ["main"]
+    branches:
+      - main
     types:
       - completed
 jobs:
@@ -15,13 +19,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: "3.x"
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -32,8 +29,5 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
-          platforms: linux/amd64
           push: true
-          tags: |
-            ghcr.io/${{ env.IMAGE_REPOSITORY }}:main
+          tags: ghcr.io/${{ env.IMAGE_REPOSITORY }}:main
