--- a/.github/workflows/CD Docker.yml
+++ b/.github/workflows/CD Docker.yml
@@ -29,5 +29,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          build-args: |
+            "GH_NPM_TOKEN=${{ secrets.GH_NPM_TOKEN }}"
           push: true
           tags: ghcr.io/${{ env.IMAGE_REPOSITORY }}:main
