--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,15 +1,17 @@
 name: CI
 on: [push, pull_request]
 jobs:
-  build:
-    name: Build
+  test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
-          cache: "yarn"
-          cache-dependency-path: "**/yarn.lock"
-      - run: yarn
-      - run: yarn build
+          cache: "pnpm"
+      - uses: "pnpm/action-setup@v2.2.2"
+        with:
+          version: "latest"
+          run_install: true
+      - run: pnpm test
