chore: update renovate to extend recodive/configs

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,9 +1,4 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"addLabels": ["dependencies"],
-	"assigneesFromCodeOwners": true,
-	"automerge": true,
-	"configWarningReuseIssue": false,
-	"semanticCommits": "enabled",
-	"stabilityDays": 3
+	"extends": ["github>Recodive/Configs:renovate-config"]
 }
