--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,4 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["github>Recodive/Configs:renovate-config"]
+	"extends": ["github>Recodive/Recodive:renovate-config"]
 }
