--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest"
 	},
 	"dependencies": {
+		"@fastify/multipart": "^7.6.0",
 		"fastify": "4.17.0",
 		"got": "12.6.0",
 		"ioredis": "5.3.2",
