--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"exclude": ["__tests__", "jest"],
+	"exclude": ["__tests__", "jest", "dist", "jest.config.cjs"],
 	"compilerOptions": {
 		/* Visit https://aka.ms/tsconfig.json to read more about this file */
 
